--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-    background:#df96ee;
+    background:#f3f3f3;
     margin: 0;
     color: #fff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -28,7 +28,9 @@ body{
     filter: blur(3px);
     -webkit-filter: blur(3px);
 }
-
+.content:hover{
+    filter: blur(0px) !important;
+}
 .content{
     position: absolute;
     z-index: 1;
@@ -50,6 +52,7 @@ body{
 
 .content .title{
     font-size: 2.2rem;
+    font-weight:600;
 }
 
 .content .text{
@@ -57,10 +60,7 @@ body{
     margin-top: 15px;
 }
 
-.services .container{
-    border-bottom-right-radius: 40px;
-    border-bottom-left-radius: 40px;
-}
+
 
 .container{
     /* max-width: 960px; */
@@ -91,14 +91,26 @@ body{
 }
 
 .bg-light{
-    background-color: #df96ee;
-    color: rgba(95, 4, 91, 0.9);
+    background-color: #f3f3f3;
+    color:#381e5f;
 }
 .bg-dark{
-    background:rgba(95, 4, 91, 0.9);
+    background:#381e5f;
     color: #f4f4f4;
 }
-
+.btn{
+    background:transparent ;
+    color:white;
+    border:2px solid #fff;
+    border-radius: 5px;
+    padding:1rem 2rem;
+    margin-top: 1rem;
+    transition:0.3s ease-in-out;
+}
+.btn:hover{
+    background-color: #fff;
+    color:#333;
+}
 footer{
     padding: 10px;
 }
