--- a/index.css
+++ b/index.css
@@ -107,6 +107,9 @@ body{
     margin-top: 1rem;
     transition:0.3s ease-in-out;
 }
+.icons{
+    filter: grayscale(1) contrast(3);
+}
 .btn:hover{
     background-color: #fff;
     color:#333;
